# test_mysql_cppcon

./: CMakeLists.txt  main.cpp
